Updated UG to remove lost functions, made rescaling non-default.

--- a/userguide/csaw.Rnw
+++ b/userguide/csaw.Rnw
@@ -406,7 +406,6 @@ head(rowRanges(demo))
 \section{Experiments involving paired-end data}
 \label{data:pet}
 
-\subsection{Counting with proper pairs}
 ChIP experiments with paired-end sequencing can be accomodated by setting \code{pe="both"} in the \code{param} object supplied to \code{windowCounts}. 
 Read extension is not required as the genomic interval spanned by the originating fragment is explicitly defined between the $5'$ positions of the paired reads.
 The number of fragments overlapping each window is then counted as described. 
@@ -456,20 +455,6 @@ However, it is recommended to set \code{ext} to the median fragment length acros
 This ensures consistency with some downstream functions, which assume that the \code{ext} field of the returned \code{RangedSummarizedExperiment} holds the average fragment length.
 Specification of \code{ext} is also necessary if fragments are to be coerced to the same length, as described in Section~\ref{sec:coercelen}.
 
-\subsection{Handling low-quality paired-end data}
-In datasets where many read pairs are invalid, the reads in those pairs can be rescued by setting \code{rescue.ext} to a positive integer.
-For each invalid intra-chromosomal read pair, the read with the higher mapping quality score will be directionally extended by \code{rescue.ext} to impute the fragment. 
-The other read in the pair is ignored.
-For inter-chromosomal read pairs, both reads are extended in this manner. 
-Counting will then be performed with these fragments in addition to those from the valid pairs. 
-An appropriate value of \code{rescue.ext} can be chosen based on the median of the fragment size distribution, above.
-
-<<>>=
-rescue.param <- reform(pe.param, rescue.ext=250)
-demo <- windowCounts(pe.bam, ext=250, param=rescue.param)
-demo$totals
-@
-
 Paired-end data can also be treated as single-end by specifiying \code{pe="first"} or \code{"second"} in the \code{readParam} constructor. 
 This will only use the first or second read of each read pair, regardless of the validity of the pair or the relative quality of the alignments.
 This setting may be useful for contrasting paired- and single-end analyses, or in disastrous situations where paired-end sequencing has failed, e.g., due to ligation between DNA fragments.
@@ -479,31 +464,6 @@ first.param <- readParam(pe="first")
 demo <- windowCounts(pe.bam, param=first.param)
 demo$totals
 @
-
-\subsection{Speeding up extraction for paired-end reads}
-Paired-end processing in \pkgname{} tends to be slow, as read names must be loaded and matched to identify proper pairs.
-This can be accelerated by performing the matching step once, and storing the identified pairs in a separate BAM file.
-Downstream applications can then directly use pairs in the new file without name matching.
-This pre-processing is performed by the \code{dumpPE} function, to produce a sorted/indexed BAM file with the specified \code{prefix}.
-
-<<>>=
-new.bam <- dumpPE("example-pet.bam", prefix="new-pet", param=pe.param)
-@
-
-All read extraction functions can set \code{fast.pe=TRUE} in \code{readParam} to extract reads quickly from the new BAM file.
-This will identify each fragment based on the mapping position of the first read in each pair and the associated insert size.
-However, almost all of the other parameters in \code{readParam} will be ignored, e.g., \code{dedup}, \code{minq}, \code{discard}, \code{rescue.ext}.
-Any that are required for the analysis should be applied during \code{dumpPE}.
-
-<<>>=
-fast.param <- reform(pe.param, fast.pe=TRUE)
-demo <- windowCounts(new.bam, ext=250, param=fast.param)
-@
-
-It is also possible to run \code{fast.pe=TRUE} on BAM files without first processing them with \code{dumpPE}.
-This should yield similar results as \code{fast.pe=FALSE} if none of the quality control parameters have been set.
-
-% Slight differences because of insert size calculations when reads are soft-clipped.
 
 \section{Estimating the average fragment length}
 \label{sec:ccf}
@@ -585,18 +545,20 @@ demo$ext
 @
 
 Caution is required to avoid detecting irrelevant DB from differences in peak widths.
-Some protection is provided in \code{windowCounts}, by scaling extended reads to the same length in all libraries.
+\code{windowCounts} can provide some protection by scaling extended reads to the same length in all libraries.
 Consider a bimodal peak across several libraries.
 Scaling ensures that the subpeak on the forward strand is centered at the same location in each library.
 The same applies for the subpeak on the reverse strand.
-This removes most of the differences in width between libraries.
-The final fragment length is taken from the \code{final.ext} attribute of the \code{ext} argument.
-This can be set with \code{makeExtVector}, and is defined as the mean of the fragment lengths by default.
-If \code{final.ext} is not present or is \code{NA}, no rescaling is performed.
+As a result, most of the differences in peak width between libraries can be removed.
+
+The desired final fragment length can be specified by setting \code{ext} to a list (or any subsettable object) of length two.
+The first element of this list represents the library-specific fragment sizes, while the second element represents the final fragment size.
+If the second element is set to \code{NA}, no rescaling is performed and the library-specific fragment sizes are used directly.
+The example below rescales all fragments to the mean of the library-specific sizes.
 
 <<>>=
-scaled.frag.lens <- makeExtVector(multi.frag.lens)
-attributes(scaled.frag.lens)$final.ext
+demo <- windowCounts(bam.files, filter=30, param=param,
+    ext=DataFrame(multi.frag.lens, mean(multi.frag.lens))) 
 @
 
 In general, use of different extension lengths is unnecessary in well-controlled datasets.
